// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InlayHintProvider > $$props 1`] = `[]`;

exports[`InlayHintProvider > $$restProps 1`] = `[]`;

exports[`InlayHintProvider > $$slots 1`] = `[]`;

exports[`InlayHintProvider > $store 1`] = `[]`;

exports[`InlayHintProvider > action 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "any",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 23,
      "line": 1,
    },
  },
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "any",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 26,
      "line": 1,
    },
  },
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "void",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 27,
      "line": 1,
    },
  },
]
`;

exports[`InlayHintProvider > animation 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "{",
      },
      {
        "value": " ",
      },
      {
        "value": "id",
      },
      {
        "value": ": ",
      },
      {
        "value": "number",
      },
      {
        "value": " ",
      },
      {
        "value": "}",
      },
      {
        "value": "[]",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 13,
      "line": 3,
    },
  },
]
`;

exports[`InlayHintProvider > component-handler 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "void",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 30,
      "line": 5,
    },
  },
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "location": {
          "range": {
            "end": {
              "character": 20,
              "line": 16546,
            },
            "start": {
              "character": 10,
              "line": 16546,
            },
          },
          "uri": "<node_modules>/typescript/lib/lib.dom.d.ts",
        },
        "value": "MouseEvent",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 22,
      "line": 9,
    },
  },
  {
    "kind": 2,
    "label": [
      {
        "location": {
          "range": {
            "end": {
              "character": 24,
              "line": 5,
            },
            "start": {
              "character": 17,
              "line": 5,
            },
          },
          "uri": "file:///Users/aewing/Projects/phx.digital/language-tools/packages/language-server/test/plugins/typescript/features/inlayHints/fixtures/component-handler/input.svelte",
        },
        "value": "message",
      },
      {
        "value": ":",
      },
    ],
    "paddingLeft": undefined,
    "paddingRight": true,
    "position": {
      "character": 30,
      "line": 9,
    },
  },
]
`;

exports[`InlayHintProvider > disable-argument-name-match 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "void",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 33,
      "line": 1,
    },
  },
  {
    "kind": 2,
    "label": [
      {
        "location": {
          "range": {
            "end": {
              "character": 24,
              "line": 1,
            },
            "start": {
              "character": 17,
              "line": 1,
            },
          },
          "uri": "file:///Users/aewing/Projects/phx.digital/language-tools/packages/language-server/test/plugins/typescript/features/inlayHints/fixtures/disable-argument-name-match/input.svelte",
        },
        "value": "message",
      },
      {
        "value": ":",
      },
    ],
    "paddingLeft": undefined,
    "paddingRight": true,
    "position": {
      "character": 8,
      "line": 5,
    },
  },
]
`;

exports[`InlayHintProvider > disable-type-name-match 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "number",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 14,
      "line": 1,
    },
  },
]
`;

exports[`InlayHintProvider > each 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "number",
      },
      {
        "value": "[]",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 11,
      "line": 1,
    },
  },
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "number",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 23,
      "line": 4,
    },
  },
]
`;

exports[`InlayHintProvider > element-handler 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "location": {
          "range": {
            "end": {
              "character": 20,
              "line": 16546,
            },
            "start": {
              "character": 10,
              "line": 16546,
            },
          },
          "uri": "<node_modules>/typescript/lib/lib.dom.d.ts",
        },
        "value": "MouseEvent",
      },
      {
        "value": " & ",
      },
      {
        "value": "{",
      },
      {
        "value": " ",
      },
      {
        "value": "currentTarget",
      },
      {
        "value": ": ",
      },
      {
        "location": {
          "range": {
            "end": {
              "character": 21,
              "line": 8857,
            },
            "start": {
              "character": 10,
              "line": 8857,
            },
          },
          "uri": "<node_modules>/typescript/lib/lib.dom.d.ts",
        },
        "value": "EventTarget",
      },
      {
        "value": " & ",
      },
      {
        "location": {
          "range": {
            "end": {
              "character": 27,
              "line": 10333,
            },
            "start": {
              "character": 10,
              "line": 10333,
            },
          },
          "uri": "<node_modules>/typescript/lib/lib.dom.d.ts",
        },
        "value": "HTMLButtonElement",
      },
      {
        "value": " ",
      },
      {
        "value": "}",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 19,
      "line": 5,
    },
  },
  {
    "kind": 2,
    "label": [
      {
        "location": {
          "range": {
            "end": {
              "character": 24,
              "line": 1,
            },
            "start": {
              "character": 17,
              "line": 1,
            },
          },
          "uri": "file:///Users/aewing/Projects/phx.digital/language-tools/packages/language-server/test/plugins/typescript/features/inlayHints/fixtures/element-handler/input.svelte",
        },
        "value": "message",
      },
      {
        "value": ":",
      },
    ],
    "paddingLeft": undefined,
    "paddingRight": true,
    "position": {
      "character": 27,
      "line": 5,
    },
  },
]
`;

exports[`InlayHintProvider > function-call-in-props 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "void",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 29,
      "line": 4,
    },
  },
  {
    "kind": 2,
    "label": [
      {
        "location": {
          "range": {
            "end": {
              "character": 20,
              "line": 4,
            },
            "start": {
              "character": 16,
              "line": 4,
            },
          },
          "uri": "file:///Users/aewing/Projects/phx.digital/language-tools/packages/language-server/test/plugins/typescript/features/inlayHints/fixtures/function-call-in-props/input.svelte",
        },
        "value": "name",
      },
      {
        "value": ":",
      },
    ],
    "paddingLeft": undefined,
    "paddingRight": true,
    "position": {
      "character": 20,
      "line": 7,
    },
  },
]
`;

exports[`InlayHintProvider > property-declaration 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "number",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 9,
      "line": 2,
    },
  },
]
`;

exports[`InlayHintProvider > reactive-block 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "number",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 12,
      "line": 1,
    },
  },
  {
    "kind": 2,
    "label": [
      {
        "location": {
          "range": {
            "end": {
              "character": 24,
              "line": 10,
            },
            "start": {
              "character": 17,
              "line": 10,
            },
          },
          "uri": "file:///Users/aewing/Projects/phx.digital/language-tools/packages/language-server/test/plugins/typescript/features/inlayHints/fixtures/reactive-block/input.svelte",
        },
        "value": "message",
      },
      {
        "value": ":",
      },
    ],
    "paddingLeft": undefined,
    "paddingRight": true,
    "position": {
      "character": 11,
      "line": 2,
    },
  },
  {
    "kind": 2,
    "label": [
      {
        "location": {
          "range": {
            "end": {
              "character": 24,
              "line": 10,
            },
            "start": {
              "character": 17,
              "line": 10,
            },
          },
          "uri": "file:///Users/aewing/Projects/phx.digital/language-tools/packages/language-server/test/plugins/typescript/features/inlayHints/fixtures/reactive-block/input.svelte",
        },
        "value": "message",
      },
      {
        "value": ":",
      },
    ],
    "paddingLeft": undefined,
    "paddingRight": true,
    "position": {
      "character": 12,
      "line": 4,
    },
  },
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "any",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 24,
      "line": 10,
    },
  },
]
`;

exports[`InlayHintProvider > reactive-varable 1`] = `
[
  {
    "kind": 1,
    "label": [
      {
        "value": ": ",
      },
      {
        "value": "number",
      },
    ],
    "paddingLeft": true,
    "paddingRight": undefined,
    "position": {
      "character": 9,
      "line": 1,
    },
  },
]
`;

exports[`InlayHintProvider > snippet.v5 1`] = `
[
  {
    "kind": 2,
    "label": [
      {
        "location": {
          "range": {
            "end": {
              "character": 15,
              "line": 0,
            },
            "start": {
              "character": 14,
              "line": 0,
            },
          },
          "uri": "file:///Users/aewing/Projects/phx.digital/language-tools/packages/language-server/test/plugins/typescript/features/inlayHints/fixtures/snippet.v5/input.svelte",
        },
        "value": "a",
      },
      {
        "value": ":",
      },
    ],
    "paddingLeft": undefined,
    "paddingRight": true,
    "position": {
      "character": 13,
      "line": 4,
    },
  },
]
`;

exports[`InlayHintProvider > transition 1`] = `[]`;

exports[`InlayHintProvider > union-type-props 1`] = `[]`;
